# osprey

./: .env.example  .gitignore  .gitmodules  docker-compose.clickhouse.yaml  docker-compose.yaml  pyproject.toml
example_plugins/: pyproject.toml
example_plugins/src/: register_plugins.py
example_plugins/src/input_streams/: kafka_input_stream.py
example_plugins/src/output_sinks/: clickhouse_execution_results_sink.py  ozone_label_sink.py
example_plugins/src/services/: atproto.py  get_repo_model.py  local_db_labels_service.py  ozone_client.py  ozone_direct_db_labels_service.py  ozone_label_model.py  ozone_labels_service.py  ozone_session.py
example_plugins/src/services/tests/: conftest.py  test_ozone_direct_db_labels_provider.py  test_ozone_direct_db_labels_service.py  test_ozone_label_model.py
example_plugins/src/shared/: metrics.py
example_plugins/src/udfs/: cache.py  censorize.py  domain.py  list.py  resolve_urls.py  sentiment.py  string.py  tokenize.py  toxicity.py
example_plugins/src/udfs/atproto/: diduri.py  facets.py  label.py  list.py
example_plugins/src/udfs/atproto/lib/: exceptions.py  uri.py
example_plugins/src/udfs/query_udfs/: regex.py
example_plugins/tests/output_sinks/: test_ozone_label_sink_apply_if.py  test_ozone_label_sink_write_through.py
example_plugins/tests/services/: test_local_db_labels_service.py  test_ozone_client.py  test_ozone_session.py
example_plugins/tests/udfs/: test_censorized_list_word_boundaries.py
example_plugins/tests/udfs/atproto/: test_label_apply_if.py  test_list_apply_if.py
example_rules/models/: base.sml
(+31 files in other folders)
